samples/_failures_safe/1761646428_74fd50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b4ab171.c: In function ‘main’:
./samples/SAFE/__tmp_5b4ab171.c:121:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  121 |     size_t test_size
      |     ^~~~~~
./samples/SAFE/__tmp_5b4ab171.c:121:5: error: expected declaration or statement at end of input
